Update CSS to prevent input zoom on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,10 @@ header > .high-low-data{
   width: auto;
   height: 1rem;
 }
+
+.input-box{
+  font-size: 16px;
+}
 input{
   width: 90%;
   border-radius: 1rem;
